fix footer color on embed

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             color: grey;
         }
 
+        .embed footer,
+        .embed footer a {
+            color: black;
+        }
+
         #fullscreen {
             position: absolute;
             right: 0.25rem;
